# MCP-Server

./: .env.example  cookies.txt  pyproject.toml  stockdata.py
mcp-bearer-token/: cookies.txt  mcp_starter.py
mcp-oauth-github/: tsconfig.tsbuildinfo
mcp_starter.egg-info/: PKG-INFO  requires.txt
